--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id "com.github.johnrengelman.shadow" version "6.1.0"
     id "io.micronaut.application" version '1.0.5'
+    id 'jacoco'
 }
 
 version "0.1"
@@ -18,6 +19,16 @@ micronaut {
         annotations "com.agoda.*"
     }
 }
+
+
+test {
+    finalizedBy jacocoTestReport
+}
+jacocoTestReport {
+    dependsOn test
+}
+
+
 
 dependencies {
     annotationProcessor("info.picocli:picocli-codegen:4.2.0")
